// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`show warning with unknown option 1`] = `
"Ignored unknown option: hello
"
`;

exports[`throw error with invalid config format 1`] = `
"Error: Invalid configuration file.
Failed to parse \\"<cwd>/tests_integration/cli/config/invalid/file/.prettierrc\\" as JSON, JS, or YAML.
"
`;

exports[`throw error with invalid config option (int) 1`] = `
"Invalid tabWidth value.
Expected an integer, but received: 0.5"
`;

exports[`throw error with invalid config option (trailingComma) 1`] = `
"Invalid option for trailingComma.
Expected \\"none\\", \\"es5\\" or \\"all\\", but received: \\"wow\\""
`;

exports[`throw error with invalid config precedence option (configPrecedence) 1`] = `
"Invalid option for --config-precedence.
Expected \\"cli-override\\", \\"file-override\\" or \\"prefer-file\\", but received: \\"option/configPrecedence\\""
`;

exports[`throw error with invalid config target (directory) 1`] = `
"Error: Invalid configuration file.
EISDIR: illegal operation on a directory, read
"
`;
